--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,6 +1,7 @@
 {
     "about": "About",
     "blog": "Blog",
+    "contact-card": "Contact Card",
     "certifications": "Certifications",
     "creations": "Creations",
     "contact": "Contact",
@@ -9,5 +10,6 @@
     "experience": "Experience",
     "publications": "Presentations",
     "skills": "Skills",
-    "socialization": "Socialization"
+    "socialization": "Social Links",
+    "technologies": "Technologies"
 }
